# st-dynamodb-connection

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: create_table.md
dynamodb_connection/: __init__.py  connection.py  dynamodb_connection.py  dynamodb_mapping.py  table_editor.py  utils.py
example/: Streamlit_DynamoDB_Connection.py  common.py  streamlit_app.py
example/pages/: 1_Pandas_API.py  2_Raw_API.py  3_Dictionary_API.py  3_Underlying_dictionary_API.py  4_Editable_table.py
examples/: Streamlit_DynamoDB_Connection.py  common.py  intro.md  requirements.txt
examples/pages/: 3_Dictionary_API.py  4_Editable_table.py
