[tool.poetry]
name = "st-dynamodb-connection"
version = "0.1.4"
description = "Streamlit Connection for Amazon DynamoDB."
authors = ["Janos Tolgyesi <janos.tolgyesi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "dynamodb_connection" }
]
homepage = "https://github.com/mrtj/st-dynamodb-connection"
repository = "https://github.com/mrtj/st-dynamodb-connection"
keywords = ["streamlit", "dynamodb", "streamlit-connection"]

[tool.poetry.dependencies]
boto3 = "~=1.28"
dynamodb-mapping = ">=0.1,<1.0"
pandas = "~=2.0"
python = ">=3.8, !=3.9.7, <4.0"
streamlit = "~=1.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
